--- a/Math-Ba-HANA/HANA_PDE_Uebung/pde_uebungen-main.tex
+++ b/Math-Ba-HANA/HANA_PDE_Uebung/pde_uebungen-main.tex
@@ -421,5 +421,6 @@ nobreak,%
 \include{pde-uebungen-4}
 \include{pde-uebungen-5}
 \include{pde-uebungen-6}
+\include{pde-uebungen-7}
 
 \end{document}
