OPTINUM: VL aktualisiert

--- a/Math-Ba-OPTINUM/OPTINUM_2_Vorlesung/steife-differentialgleichungen.tex
+++ b/Math-Ba-OPTINUM/OPTINUM_2_Vorlesung/steife-differentialgleichungen.tex
@@ -1736,556 +1736,4 @@ Statt der A-Stabilität von Gauß-Verfahren zeigen wir:
 
 
 
-%\section{Linear-implizite Einschrittverfahren}
-%
-%
-%Wir haben Verfahren konstruiert, die hohe Ordnung haben, und trotzdem $A$-stabil sind.
-%\begin{itemize}
-%	\item Gauß-Verfahren, es gibt aber noch andere.
-%\end{itemize}
-%Diese Verfahren sind implizit. Zum Berechnen des nächsten Zeitschritts muss ein Gleichungssystem gelöst werden.
-%\begin{itemize}
-% \item Falls $f$ linear ist, so ist dieses Gleichungssystem linear. Das ist okay.
-% \item Falls $f$ nichtlinear ist, so ist Gleichungssysteme ebenfalls nichtlinear. Das  kann ganz schön teuer werden!
-%\end{itemize}
-%Können wir $A$-stabile Verfahren konstruieren, für die bei jedem Schritt nur ein lineares Gleichungssystem gelöst werden muss, selbst wenn $f$ nichtlinear ist?
-%
-%\subsection{Stabilität von Fixpunkten}
-%
-%Wir wollen einen alternativen Stabilitätsbegriff für autonome
-%nichtlineare Differentialgleichungen $x'=f(x)$ untersuchen.
-%
-%\begin{definition}
-% Ein Zustand $x_*\in\Omega_0$ heißt Fixpunkt der Gleichung, wenn $f(x_*)=0$,
-% bzw.\ wenn $\Phi^tx_*=x_*$ für alle $t$ ist.
-%\end{definition}
-%\begin{definition}
-%	Ein Fixpunkt $x_*$ heißt asymptotisch stabil, wenn ein $\epsilon>0$ existiert, so dass $\lim_{t\to\infty} \Phi^t x_0 = x_*$ für alle $x_0\in\Omega_0$ mit $\norm{x_*-x_0}<\epsilon$.
-%\end{definition}
-%
-%\emph{Beispiel:}
-%
-%\begin{center}
-%\begin{tikzpicture}
-%\draw[->] (0,-1) node[right]{$x_*$ asymptotisch stabil} -- (0,4) ;
-%\draw[->] (-1,0) -- (4,0) node[right]{$t$};
-%\foreach \i in {0,...,3}
-%{
-%	\foreach \j in {0,...,7}
-%	{
-%		\draw[->] (\i,\j / 2) -- (\i + 0.8,\j / 4 + 1) ;
-%	}
-%}
-%\draw (0,2) node[left]{$x_*$};
-%\end{tikzpicture}
-%%
-%\hspace{0.1\textwidth}%
-%%
-%\begin{tikzpicture}
-%\draw[->] (0,-1) node[right]{$x_*$ instabil} -- (0,4) ;
-%\draw[->] (-1,0) -- (4,0) node[right]{$t$};
-%\foreach \i in {0,...,3}
-%{
-%	\foreach \j in {0,...,7}
-%	{
-%		\draw[->] (\i,\j / 4 + 1) -- (\i + 0.8,\j / 2) ;
-%	}
-%}
-%\draw (0,2) node[left]{$x_*$};
-%\end{tikzpicture}
-%\end{center}
-%
-%Man erkennt an den Bildern, dass die asymptotische Stabilität von $x_*$ mit der Ableitung von $f$ in (der Nähe von) $x_*$ zusammenhängt. 
-%\begin{satz}[{{\cite{deuflhard_bornemann:2008}}} 3.30]
-%	Sei $x_*\in\Omega_0$ Fixpunkt von $x'=f(x)$, und $f$ sei stetig differenzierbar. Falls
-%	\begin{equation*}
-%	\nu(Df(x_*))<0,
-%	\end{equation*}
-%	so ist $x_*$ asymptotisch stabiler Fixpunkt
-%\end{satz}
-%(\emph{Erinnerung:} $\nu$ ist die Spektralabzisse, der größte Realteil aller Eigenwerte.)
-%
-%\bigskip
-%
-%\emph{Zwischenfazit:} Um die asymptotische Stabilität von Fixpunkten zu untersuchen, reicht es, sich die Linearisierung um $ x_* $ anzuschauen!\\
-%
-%Wir betrachten jetzt zusätzlich die um $ x_* $ linearisierte Differentialgleichung
-%\begin{equation}\label{Gleichung:Linearisierte-Differentialgleichung}
-%(x-x_*)' = x' = Df(x_*)(x-x_*).
-%\end{equation}
-%
-%\medskip
-%
-%\emph{Idee}: Wenn $Df(x_*)$ das Stabilitätsverhalten von $x_*$ qualitativ richtig beschreibt,
-%dann enthält die \emph{lineare} Gleichung~\eqref{Gleichung:Linearisierte-Differentialgleichung}
-%vielleicht schon alle \glqq schwierigen\grqq{} (im Sinne der Stabilität) Aspekte von $ x'=f(x) $
-%in der Nähe von $ x_* $?
-%
-%\medskip
-%
-%Betrachte ein beliebiges Einschrittverfahren:
-%\begin{itemize}
-%	\item $\Psi^\tau$ diskreter Fluss für das Ausgangsproblem
-%	\item $\Psi_*^\tau$ diskreter Fluss für das linearisierte Problem $x'=Df(x_*)(x-x_*)$.
-%\end{itemize}
-%\begin{definition}
-%	Ein Einschrittverfahren heißt \emph{invariant gegen Linearisierung um einen Fixpunkt $x_*$}, wenn
-%	\begin{enumerate}
-%		\item $\Psi^\tau x_*=x_*\ \forall\tau>0$ ($\tau$ zulässig)\\
-%		$\rightarrow$ der Fixpunkt der Differentialgleichung ist auch
-%		 Fixpunkt des numerischen Verfahrens für die nichtlineare Gleichung.
-% %
-%		\item $\Psi_*^\tau x = x_* + R(\tau Df(x_*))(x-x_*)$ mit einer rationalen Funktion $R$,
-%		die nur vom Verfahren abhängt\\
-%		$\rightarrow$ D.h.: Für das linearisierte Problem degeneriert das Verfahren zu einer rationalen Approximation der Exponentialfunktion.
-% %
-%		\item $D_x\Psi^\tau x\vert_{x=x_*}=\Psi^\tau_*$ für alle zulässigen $\tau$\\
-%		$\rightarrow$ $\Psi^\tau_*$ ist Linearisierung von $\Psi^\tau$.
-%	\end{enumerate}
-%\end{definition}
-%
-%Zum Beispiel sind alle expliziten RK-Verfahren in diesem Sinne invariant. Solch ein Verfahren
-%heißt $A$-stabil, falls $R$ $A$-stabil ist.
-%
-%\medskip
-%
-%Invariante Verfahren retten den Zusammenhang zwischen der asymptotischen Stabilität
-%eines Fixpunkts $x_*$ und der Linearisierung dort ins Diskrete:
-%
-%\begin{satz}[{{\cite{deuflhard_bornemann:2008}}} 6.23]
-% Sei $\Psi^\tau$, $\Psi^\tau_*$ ein gegen Linearisierung invariantes Einschrittverfahren.
-%	Sei $\tau_c\geq 0$ die maximale Schrittweite, so dass $\Psi^\tau_*$ die asymptotische Stabilität vererbt. Dann ist $x_*$ asymptotisch stabiler Fixpunkt der Rekursion
-%	\begin{equation*}
-%	x_{n+1} = \Psi^\tau x_n\qquad n=0,1,2,\hdots
-%	\end{equation*}
-%	für alle $\tau<\tau_c$.
-%\end{satz}
-%\underline{Bsp:} Skalare Differentialgleichung
-%\begin{equation*}
-%x' = \lambda(1-x^2),\qquad \lambda > 0.
-%\end{equation*}
-%\begin{itemize}
-%	\item Fixpunkte:\\
-%	$ x_s = 1$ (asymptotisch stabil)\\
-%	$ x_u = -1$ instabil
-%	
-%	\item Linearisierte Gleichung in $x_s$:
-%	\begin{equation*}
-%	x' = f'(x_s)(x-x_s) = -2\lambda x_s(x-x_s) = -2\lambda(x-1)
-%	\end{equation*}
-%	\item Explizites Euler-Verfahren dafür
-%	\begin{itemize}
-%		\item stabil, wenn $\tau< 1/\lambda$
-%	\end{itemize}
-%	\item Es folgt: $x_s$ ist auch asymptotisch stabiler Fixpunkt des expl. Euler-Verfahrens für die nichtlineare Gleichung
-%	\begin{equation*}
-%	x_{n+1} = x_n + \tau f(x_n) = x_n + \tau\lambda(1-x_n^2).
-%	\end{equation*}
-%	Aber wie gesagt nur falls $\tau< 1/\lambda$.
-%\end{itemize}
-%Und nicht vergessen: $x_s$ ist nur dann Attraktor, wenn man nah genug dran startet. Für dieses Beispiel heißt das:
-%\begin{itemize}
-%	\item Kontinuierlich: $x_0>-1$
-%	\item Euler: $x_0\in[0, 5/4]$.
-%\end{itemize}
-%
-%\subsection{Linear-implizite Runge--Kutta-Verfahren}
-%
-%\emph{Idee:} Behandle nur den linearen Teil von $f$ implizit.
-%
-%\bigskip
-%
-%Für festes $\bar{x}\in\Omega_0$ schreibe die Differentialgleichung als
-%\begin{equation*}
-%x'(t) = Jx(t) + (f(x(t)) - Jx(t)),\qquad J=Df(\bar{x})\in\R^{d\times d}
-%\end{equation*}
-%
-%(Hier ist $\bar{x}$ beliebig; in der Praxis linearisiert man um den Zustand
-%zum vorigen Zeitschritt.)
-%
-%Wende das implizite Euler-Verfahren auf den ersten Term an, und das explizite Euler-Verfahren auf den Rest.
-%\begin{equation*}
-%\Psi^\tau x = \xi + \tau(f(x)-Jx),\qquad \xi = x+\tau J\xi
-%\end{equation*}
-%Das ist das linear-implizite oder semi-implizite Euler-Verfahren.
-%\begin{itemize}
-%	\item Nur ein \emph{lineares} Gleichungssystem pro Schritt
-%	\item Trotzdem $A$-stabil
-%\end{itemize}
-%Jetzt allgemein: Linear-implizite Runge-Kutta-Verfahren
-%\begin{equation*}
-%\Psi^\tau x = x + \tau \sum_{j=1}^s b_jk_j
-%\end{equation*}
-%\begin{equation*}
-%k_i = J\Big(x+\tau\sum_{j=1}^i \beta_{ij} k_j\Big)
-%    + \bigg[ f\Big(x+\tau\sum_{j=1}^{i-1} \alpha_{ij} k_j\Big)
-%       - J\Big(x+\tau\sum_{j=1}^{i-1} \alpha_{ij} k_j\Big)\bigg]
-%\end{equation*}
-%für $i=1,\hdots,s$.\\
-%
-%\underline{Beachte:} Der obere Summationsindex des impliziten Teils ist $i$, nicht $s$.
-%\begin{itemize}
-% \item Dadurch kann der Phasenfluss durch wiederholtes Lösen \emph{linearer} Gleichungssysteme berechnet werden.
-% \begin{enumerate}
-%  \item $J = Df(x)$
-%  \item $\displaystyle (I-\tau\beta_{ii}J)k_i = \tau\sum_{j=1}^{i-1}(\beta_{ij}-\alpha_{ij})Jk_j + f\Big(x + \tau\sum_{j=1}^{i-1} \alpha_{ij} k_j\Big)$ für $i=1,\hdots,s$
-%  \item $\displaystyle \Psi^\tau x = x + \tau\sum_{j=1}^{s} b_j k_j$
-% \end{enumerate}
-%\end{itemize}
-%Solche Verfahren heißen \emph{lineare-implizite RK-Verfahren} oder \emph{Rosenbrock-Verfahren.}
-%
-%\medskip
-%
-%Koeffizienten: $A=(\alpha_{ij})\in\R^{s\times s},\ B=(\beta_{ij})\in\R^{s\times s},\  b=(b_1\hdots,b_s)$
-%\begin{itemize}
-%	\item Wählt man die $\beta_{ij}$ alle gleich, so haben die $s$ Gleichungssysteme in 2) alle die gleiche Matrix\\
-%	$\Rightarrow$ Es reicht eine LR-Zerlegung, um alle $s$ Gleichungssysteme zu lösen.
-%\end{itemize}
-%Die Frage, ob sich die linearen Gleichungssysteme tatsächlich immer lösen lassen, ist einfacher als für den allgemeinen impliziten Fall:
-%\begin{lemma}
-%	Sei $\beta\geq 0$ und $J\in\R^{d\times d}$. Die Matrix $I-\tau\beta J$ ist für alle $0\leq \tau\leq \tau_*$ invertierbar. Dabei hängt $\tau_*$ von der Spektralabzisse $\nu(J)$ ab:
-%	\begin{equation*}
-%	\tau_* = \infty\text{ für } \nu(J)\leq 0, \qquad \tau_* =  \frac{1}{\beta\nu(J)} \text{ für }	\nu(J) > 0.
-%	\end{equation*}
-%\end{lemma}
-%\begin{proof}
-%	Zu zeigen: Unter den gegebenen Voraussetzungen hat $I-\tau\beta J$ nicht den Eigenwert 0.
-%	\begin{itemize}
-%		\item Nach Satz \eqref{thm:spektrale_aequivarianz} über rationale Funktionen ist aber
-%		\begin{equation*}
-%		\sigma(I-\tau\beta J) = 1-\tau\beta\sigma(J).
-%		\end{equation*}
-%	\end{itemize}
-%	Deshalb zu zeigen: $J$ hat keinen Eigenwert $\lambda$ mit $1-\tau\beta\lambda = 0$.\\
-%	\underline{Fall 1:} $\nu(J) \leq 0$, d.h.\ insbesondere $\Re(\lambda)\leq 0$:\\
-%	\begin{equation*}
-%	\Re(1-\tau\beta\lambda) = 1-\tau\beta \Re(\lambda) \geq 1\ \Rightarrow\ 1-\tau\beta\lambda \neq 0.
-%	\end{equation*}
-%	\underline{Fall 2:} $0<\Re(\lambda)\leq \nu(J)$:\\
-%	\begin{equation*}
-%	\Re(1-\tau\beta\lambda) = 1 - \tau \beta \Re(\lambda) \geq 1 - \tau\beta\nu(J).
-%	\end{equation*}
-%	Also $>0$ wenn $\tau < \frac{1}{\beta\nu(J)}$.
-%\end{proof}
-%Der Satz sagt: Die steifen Anteile der Differentialgleichung (d.h., die nichtpositiven Eigenwert von $J$),
-%beeinflussen nicht Lösbarkeit des Gleichungssystems.
-%
-%\medskip
-%
-%Für autonome \emph{lineare} Probleme ist das Verfahren offensichtlich äquivalent zum impliziten
-%Runge-Kutta-Verfahren $(b, (\beta_{ij}))$.  Es hat also die selbe Stabilitätsfunktion.
-%
-%\medskip
-%
-%Konstruktion der Bedingungsgleichungen: Ähnlich wie bei expl. RK-Verfahren.
-%
-%
-%\section{Erhalt erster Integrale}
-%
-%Betrachte die autonome Differentialgleichung
-%\begin{equation*}
-%	x'=f(x)
-%\end{equation*}
-%auf einem Phasenraum $\Omega_0$.
-%
-%\begin{definition}
-% Eine Funktion $\mathcal E:\Omega_0\to\R$ heißt \emph{erstes Integral}, wenn
-% \begin{equation*}
-%		\mathcal E(\Phi^t x) = \mathcal E(x)
-%	\end{equation*}
-% für alle $x\in\Omega_0$ und alle zulässigen $t$ gilt.
-%\end{definition}
-%
-%	Alternative Bezeichnungen:
-%	\begin{itemize}
-%		\item Invariante
-%		\item Erhaltungsgröße
-% \item engl.: constant of motion
-%	\end{itemize}
-%
-%\emph{Beispiel:} Mathematisches (Faden-)pendel\\
-%\begin{figure}[h]
-%\begin{center}
-%\begin{tikzpicture}
-%\draw (0,4) -- (5,4);
-%\foreach \i in {0,...,10}
-%\draw (\i / 2, 4) -- ( \i/2+ 0.5, 4.5);
-%\draw[fill] (2.5,4) circle (2pt);
-%\draw[fill] (4,2.15) circle (2pt) node[below right]{$m=1$};
-%\draw (0.5,2.4) arc (-120:-60:4);
-%\draw  (2.5,4) -- node[right]{$l=1$} (4,2.15) ;
-%\draw (2.5,4) -- (2.5,1.85);
-%\draw[dashed] (4,2.15) -- (2.5,2.15);
-%\draw (2.5, 3) arc (-90:-50:1);
-%\draw (2.8,3.3) node {$q$};
-%\draw [decorate,decoration={brace,amplitude=4pt}]
-%(2.5,2.15)--(2.5,4) node[midway, left] {$\cos(q)$};
-%\end{tikzpicture}
-%\end{center}
-%\end{figure}
-%
-%Bewegungsgleichungen für Winkel $q$:
-%\begin{align*}
-% \ddot{q} + \frac{g}{l} \sin q = 0
-%\end{align*}
-%bzw.\ als System erster Ordnung:
-%\begin{align*}
-%\dot{p} &= - mgl \sin q\\
-%\dot{q} &= \frac{1}{ml^2} p.
-%\end{align*}
-%Erhält $\mathcal E(p,q) = \frac{1}{2} \frac{1}{ml^2} p^2 - mgl \cos q $ (die totale Energie).\\
-%
-%\emph{Beispiel:} Betrachte ein System mit $N$ Partikeln
-%\begin{itemize}
-%	\item $q_i\in\R^3,\ i=1,\hdots,N$ Positionen, $p_i\in\R,\ i=1,\hdots,N$ Impulse
-%        \item $m_i$: Massen
-% \item Paarweise Interaktion über Kräfte, die vom Abstand abhängen.
-%\end{itemize}
-%Bewegungsgleichungen:
-%\begin{equation*}
-%	q_i'=\frac{p_i}{m_i},\qquad p_i' = \sum_{j=1}^N \nu_{ij}(q_i-q_j)
-%\end{equation*}
-%mit
-%\begin{align*}
-% \nu_{ij}(y) = - \nu_{ji}(-y)
-%\end{align*}
-%daraus folgt insbesondere dass $\nu_{ii} = 0$.
-%
-%Die Bewegungsgleichungen erhalten den Gesamtimpuls $P=\sum_{i=1}^Np_i$, denn
-%\begin{equation*}
-% \frac{d}{dt}\sum_{i=1}^Np_i = \sum_{i=1}^N p_i' = \sum_{i=1}^N\sum_{j=1}^N\nu_{ij}(q_i-q_j) = 0
-%\end{equation*}
-%Ebenso: Der Gesamtdrehimpuls $L=\sum_{i=1}^N q_i\times p_i$
-%\begin{align*}
-%\frac{d}{dt}\sum_{i=1}^N q_i\times p_i
-% & = \sum_{i=1}^N q_i'\times p_i+\sum_{i=1}^N q_i\times p_i' \\
-% %
-% & = \sum_{i=1}^N \frac{1}{m_i}\underbrace{p_i\times p_i}_{=0} + \sum_{i=1}^N\sum_{j=1}^Nq_i\times\nu_{ij}(q_i-q_j) \\
-% %
-% & = 0.
-%\end{align*}
-%Klassifikation der Erhaltungsgrößen: (für diese Beispiele)
-%\begin{itemize}
-% \item Impuls: linear
-% \item Drehimpuls: quadratisch
-% \item Energie beim Fadenpendel: nichtlinear
-%\end{itemize}
-%Man hätte gerne numerische Verfahren, die erste Integrale erhalten.
-%
-%\medskip
-%
-%Zunächst eine einfache Charakterisierung mit Hilfe von $f$:
-%\begin{lemma}[{{\cite{deuflhard_bornemann:2008}}} 6.56]
-% Sei $f$ lokal Lipschitz-stetig. Eine Funktion $\mathcal E\in C^1(\Omega_0,\R)$ ist genau dann
-% erstes Integral, wenn
-% \begin{equation*}
-%  \nabla\mathcal E(x)\cdot f(x) = 0
-%	\end{equation*}
-%	für alle $x\in\Omega_0$.
-%\end{lemma}
-%\begin{proof}
-%	Kettenregel:
-% \begin{equation*}
-%  0
-%  =
-%  \frac{d}{dt} \mathcal E(\Phi^t x)
-%  =
-%  \nabla\mathcal E(\Phi^tx)\cdot \frac{d}{dt}\Phi^tx
-%  =
-%  \nabla\mathcal E(\Phi^tx)\cdot f(\Phi^tx).  
-%\end{equation*}
-%\end{proof}
-%
-%\bigskip
-%
-%\emph{Beispiel:} Wir zeigen Energieerhaltung des Fadenpendels.
-%Für dieses Modell gilt:
-%\begin{align*}
-% f(x) & = f(p,q)
-%  =
-%  \begin{pmatrix}
-%   - mgl \sin q \\ \frac{p}{ml^2}
-%  \end{pmatrix} \\
-% %
-% \mathcal{E}(x) & = \mathcal{E}(p,q)
-%  =
-%  \frac{1}{2} \frac{p^2}{ml^2} - mgl \cos q
-%\end{align*}
-%Der Gradient der Energie ist
-%\begin{equation*}
-% \nabla \mathcal{E}(p,q)
-% =
-% \begin{pmatrix}
-%  \frac{p}{ml^2} \\ mgl \sin q
-% \end{pmatrix}
-%\end{equation*}
-%Damit erhält man
-%\begin{equation*}
-% \nabla \mathcal{E}(p,q) \cdot f(p,q)
-% =
-% \frac{p}{ml^2}(- mgl \sin q) + mgl \sin q\frac{p}{ml^2}
-% =
-% 0.
-%\end{equation*}
-%
-%
-%
-%\bigskip
-%
-%\begin{satz}[{{\cite[Thm.\ IV.1.5]{hairer_lubich_wanner:2006}}}]
-%	Alle Runge-Kutta-Verfahren erhalten lineare Invarianten.
-%\end{satz}
-%\begin{proof}\mbox{}
-%	\begin{itemize}
-%		\item Sei $\mathcal{E}$ lineare Invariante, also $\mathcal{E}(x) = d^Tx$ mit festem Vektor $d$.
-%		\item Nach dem vorigen Satz ist dann $d^T f(x) = 0$ für alle $x\in\Omega_0$.
-%		\item Für eine Stufe $k_i$ eines beliebigen RK-Verfahrens ist dann
-%		\begin{equation*}
-%			d^T k_i = d^T f\Big( x+\tau\sum_{j=1}^s a_{ij}k_j \Big) = 0.
-%		\end{equation*}
-%		\item Also ist
-%		\begin{equation*}
-%			\mathcal E(x_{k+1})
-%			=
-%			d^T x_{k+1}
-%			=
-%			d^T\Big(x_k+\tau\sum_{i=1}^s b_{i}k_i\Big)
-%			=
-%			d^T x_k
-%			=
-%			\mathcal{E}(x_k).   
-%		\end{equation*}
-%		\end{itemize}
-%\end{proof}
-%
-%Für die quadratischen Invarianten betrachten wir zunächst einen wichtigen Spezialfall:
-%
-%\medskip
-%
-%\emph{Frage:} Für welche linearen autonomen Differentialgleichungen
-%\begin{equation*}
-% x'=Ax
-%\end{equation*}
-%erhält der Phasenfluss $\Phi^t$ die Euklidische Norm
-%\begin{equation*}
-%	\norm{\Phi^t x}_2 = \norm{x}_2\quad\forall t?
-%\end{equation*}
-%$\Rightarrow$ Genau dann, wenn $\Phi^t = \exp(tA)$ eine orthogonale Matrix ist.
-%\begin{satz}[{{\cite[6.18]{deuflhard_bornemann:2008}}}]
-%\label{thm:normerhaltende_fluesse}
-% Sei $A\in\R^{d \times d}$. Die Matrix $\exp(tA)$ ist genau dann orthogonal,
-% wenn $A$ schiefsymmetrisch ist.
-%\end{satz}
-%\begin{proof}
-% Teil~I) $\exp(tA)\in O(d) \Rightarrow A=-A^T$
-% \begin{itemize}
-%  \item Sei $\exp(tA)\in O(d)$ für alle $t$.
-%  \item Dann ist
-%   \begin{equation*}
-%    I = \exp(tA)^T \exp(tA) = \exp(tA^T) \exp(tA).
-%   \end{equation*}
-% \item Differenziere nach $t$ und betrachte $t=0$
-%  \begin{equation*}
-%   0=\Big(A^T \exp(tA^T) \exp(tA) + \exp(tA^T)A \exp(tA) \Big)\Big|_{t=0} = A^T+A
-%  \end{equation*}
-%	\end{itemize}
-% Teil~II) $A=-A^T \Rightarrow \exp(tA)\in O(d)$
-% \begin{align*}
-%	 I
-%	 &= \exp(tA-tA) = \exp(tA)\cdot \exp(-tA)\quad\text{(da $A$ mit $A$ kommutiert)}\\
-%	 &= \exp(tA)\cdot \exp(tA^T) \\
-%	 &= \exp(tA)\cdot \exp(tA)^T.
-%	 
-% \end{align*}
-%\end{proof}
-%Zentral ist anscheinend die Eigenschaft
-%\begin{equation*}
-%	\exp(z)\cdot \exp(-z) = 1\qquad \forall z\in\C.
-%\end{equation*}
-%Das nennt man \emph{Reversibilität}.
-%
-%\medskip
-%
-%Man hätte diese Eigenschaft gerne auch für diskrete Verfahren.
-%\begin{definition}
-%	Eine diskrete Evolution $\Psi$ heißt reversibel, wenn
-%	\begin{equation*}
-%		\Psi^{t,t+\tau}\Psi^{t+\tau,t} x = x
-%	\end{equation*}
-%	für alle $(t,x)\in\Omega$ und hinreichend kleine $\tau$.
-%\end{definition}
-%
-%\emph{Beispiel:} Das explizite Euler-Verfahren ist nicht reversibel.
-%
-%\medskip
-%
-%Reversible rationale Approximationen der Exponentialfunktion erzeugen normerhaltende diskrete Flüsse.
-%
-%\begin{satz}[Db\,\&\,Bo 6.21]
-%	Sei $R$ eine rationale, konsistente, reversible Approximation der Exponentialfunktion. Dann gilt für eine Matrix $A\in\R^{d\times d}$
-%	\begin{equation*}
-%		R(\tau A)\in O(d)\qquad\forall \tau > 0
-%	\end{equation*}
-%	genau dann, wenn $A=-A^T$.
-%\end{satz}
-%\begin{proof}
-% Weitestgehend wie bei Satz~\ref{thm:normerhaltende_fluesse}.
-%\end{proof}
-%\emph{Beispiel:}
-%\begin{equation*}
-%	R(z) = \frac{1+\frac{z}{2}}{1-\frac{z}{2}}=1+z+\frac{z^2}{2} + \frac{z^3}{4} + \mathcal{O}(z^4) = e^z + \mathcal O(z^3)
-%\end{equation*}
-%\begin{itemize}
-%	\item Die entsprechende Matrix-Abbildung heißt \emph{Cayley-Transformation}.
-%	\item Stabilitätsfunktion insbesondere der impliziten Mittelpunktsregel\\
-%	$\rightarrow$ dem einfachsten Gauß-Verfahren.
-%\end{itemize}
-%Gauß-Verfahren erhalten sogar beliebige quadratische Invarianten!
-%\begin{satz}[{{\cite[6.58]{deuflhard_bornemann:2008}}}]
-%	Die D.Gl. $x'=f(x)$ mit lokal Lipschitz-stetigem $f$ besitze das quadratische erste Integral $\mathcal E$, d.h.
-%	\begin{equation*}
-%		\mathcal E(x) = x^TEx + e^Tx + \eta
-%	\end{equation*}
-%	mit $E\in\R^{d\times d},\ e\in\R^d,\ \eta\in\R$. Jedes Gaus-Verfahren erzeugt einen Phasenfluss $\Psi$, der $\mathcal E$ erhält, d.h.
-%	\begin{equation*}
-%		\mathcal E(\Psi^\tau x) = \mathcal E(x)
-%	\end{equation*}
-%	für alle $x\in\Omega_0$ und  zulässige $\tau$.
-%\end{satz}
-%\begin{proof}
-%	Ganz ähnlich wie der Beweis der $B$-Stabilität.
-%	\begin{itemize}
-%		\item  Sei $x\in\Omega_0$, und $\tau$ so klein, dass das Kollokationspolynom
-%		\begin{equation*}
-%			u\in P_s,\quad u(0)=x,\quad u(\tau) = \Psi^\tau x
-%		\end{equation*}
-%		existiert.
-%		\item $\mathcal E$ ist quadratisch. Deshalb ist
-%		\begin{equation*}
-%			q(\theta) \colonequals \mathcal E(u(\theta\tau))
-%		\end{equation*}
-%		ein Polynom in $P_{2s}$.
-%		\item Hauptsatz der Integralrechnung:
-%		\begin{equation*}
-%			\mathcal E(\Psi^\tau x) = q(1) = q(0) + \int_0^1q'(\theta)\,d\theta = \mathcal E(x) + \int_0^1q'(\theta)\,d\theta . 
-%		\end{equation*}
-%		\item Zu zeigen ist also $\int_0^1q'(\theta)\,d\theta =0$.
-%		\item Nutze Quadraturformel des Gauß-Verfahrens.\\
-%		Diese ist für Polynome in $P_{2s-1}$ exakt:
-%		\begin{equation*}
-%			\int_0^1q'(\theta)\,d\theta = \sum_{j=1}^s b_j q'(c_j).
-%		\end{equation*}
-%		\item Es sind aber alle $q'(c_j)=0$, denn
-%		\begin{align*}
-%		q'(c_j) &= \big(\mathcal E(u(c_j\tau))\big)'\\
-%		   &= \tau\nabla\mathcal E(u(c_j\tau))\cdot u'(c_j\tau)\quad\text{(Kettenregel)} \\
-%		   &= \tau\nabla\mathcal E(u(c_j\tau))\cdot f(u(c_j\tau))\quad\text{(Kollokationseigenschaft)}\\
-%		   &= 0\quad\text{(da $\mathcal E$ eine Invariante ist)}.
-%		\end{align*}
-%	\end{itemize}
-%\end{proof}
-%Was ist mit der Energieerhaltung des Fadenpendels?
-%\begin{itemize}
-%	\item Das behandeln wir später.
-%	\item Mit der Theorie der Hamiltonschen Systeme.
-%\end{itemize}
+\input{11-7-linear-impliziteEinschrittverfahren}
